tests/baselines/reference/commentOnSignature1(strict=true).errors.txt
a.ts(22,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
a.ts(24,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== b.ts (0 errors) ====
    ///<reference path='a.ts'/>
    function foo2(n: number): void;
    // Don't keep this comment.
    function foo2(s: string): void;
    function foo2(a: any): void {
    }
==== a.ts (2 errors) ====
    /*!=================
        Keep this pinned
       =================
    */
    
    /*! Don't keep this pinned comment */
    function foo(n: number): void;
    // Don't keep this comment.
    function foo(s: string): void;
    function foo(a: any): void {
    }
    
    class c {
        // dont keep this comment
        constructor(a: string);
        /*! keep this pinned comment */
        constructor(a: number);
        constructor(a: any) {
        }
    
        // dont keep this comment
        foo(a: string);
        ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        /*! keep this pinned comment */
        foo(a: number);
        ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        foo(a: any) {
        }
    }
    